--- a/servicio-usuarios-dev.properties
+++ b/servicio-usuarios-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_sprintboot_cloud
+spring.datasource.url=jdbc:postgresql://microservicios-postgres16:5432/db_sprintboot_cloud
 spring.datasource.username=postgres
 spring.datasource.password=sasa
 spring.datasource.driver-class-name=org.postgresql.Driver
